# tatsy-pppm

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
assets/: gargoil.ply  rt3.ply  subway.hdr  torus.ply
sources/: CMakeLists.txt  appmain.cc  bbox.cc  bbox.h  brdf.cc  brdf.h  bsdf.cc  bsdf.h  bssrdf.cc  bssrdf.h  camera_interface.h  common.h  directories.h  directories.h.in  envmap.cc  envmap.h  geometry_interface.h  halton.cc  halton.h  hash_grid.h  hash_grid_detail.h  image.cc  image.h  kdtree.h  kdtree_detail.h  orthogonal_camera.cc  orthogonal_camera.h  path.h  path_tracing.cc  path_tracing.h  perspective_camera.cc  perspective_camera.h  photon.h  photon_diffusion.cc  photon_diffusion.h  photon_map.cc  photon_map.h  plane.cc  plane.h  ppm_probabilistic.cc  (+34 more)
sources/main/: CMakeLists.txt  appmain.cc
tests/: CMakeLists.txt  test_macros.h  test_trimesh.cc  test_vector3d.cc
